<resources>
    <string name="app_name">Simple Droid 15 Puzzle</string>
    <string name="c1x1">c1x1</string>
    <string name="c1x2">c1x2</string>
    <string name="c1x3">c1x3</string>
    <string name="c1x4">c1x4</string>
    <string name="c2x1">c2x1</string>
    <string name="c2x2">c2x2</string>
    <string name="c2x3">c2x3</string>
    <string name="c2x4">c2x4</string>
    <string name="c3x1">c3x1</string>
    <string name="c3x2">c3x2</string>
    <string name="c3x3">c3x3</string>
    <string name="c3x4">c3x4</string>
    <string name="c4x1">c4x1</string>
    <string name="c4x2">c4x2</string>
    <string name="c4x3">c4x3</string>
    <string name="c4x4">c4x4</string>


    <string name="welcome">Welcome!!!</string>
    <string name="reload">Reload</string>
</resources>
